feat(election): introduce ElectionErrorCode and waiver/voting controllers for Phase 6 web layer
- Add ElectionErrorCode feature-scoped enum implementing ErrorCode (codes for waiver / voting / data-scope)
- Add ElectionExceptionTranslator: WaiverApplicationException.Reason / VotingApplicationException.Reason → ElectionErrorCode mapping (also surfaces ReasonTextValidator failures with structured codes)
- Rewrite GlobalExceptionHandler as the sole funnel: handles AppException, Waiver/Voting application exceptions, validation, auth/access-denied, IllegalState (data-scope SQL parse failure routed via message-match to keep infra layer free of web ErrorCode dep), and generic fallback
- New WaiverController: 5 endpoints for waiver lifecycle (initiate / committee-review / street-review / revoke / find), uses SecurityUtils.getUserId/getTenantId/getDeptType
- New VotingController: GET result snapshot only — settle is scheduler-triggered to prevent bypassing voting deadlines via HTTP
- DTO records with Bean Validation: SubmitWaiverRequest, ReviewWaiverRequest, WaiverResponse, VotingResultResponse
- Extend UserSecurityContext to carry deptType (sys_dept.dept_type) end-to-end: SysUserDto + UserMapper.xml JOIN sys_dept, JwtAuthenticationFilter populates, SecurityUtils exposes getDeptType()
- DataScopeInterceptor.UserSecurityContext gains deptType field (annotated semantics: 1=街道办/2=居委会/3=物业)
- MockDataScopeUserSecurityContextProvider sets deptType=4 for grid-mock identity
- ElectionVotingEngine: minor `.collect(Collectors.toList())` → `.toList()` cleanup (drive-by)

All 17 existing tests pass: AppExceptionBehaviorTest (6), ControllerIntegrationTest (6), ElectionVotingEngineTest (1), VotingDecisionEngineTest (2), DataScopeTest (2). 0 regressions.

Co-Authored-By: Claude <noreply@anthropic.com>